Implement PDF extraction and processing functionality with FastAPI; add environment variable loading and update requirements

--- a/test.ipynb
+++ b/test.ipynb
@@ -216,6 +216,72 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2264636b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26f1a949",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c39a1477",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from module.vector import PostgreDB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6b620be8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/macbook/miniconda3/envs/ai-innovation/lib/python3.11/site-packages/vertexai/generative_models/_generative_models.py:433: UserWarning: This feature is deprecated as of June 24, 2025 and will be removed on June 24, 2026. For details, see https://cloud.google.com/vertex-ai/generative-ai/docs/deprecations/genai-vertexai-sdk.\n",
+      "  warning_logs.show_deprecation_warning()\n",
+      "INFO:module.multimodal_model:Gemini Flash multimodal initialized successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "db = PostgreDB()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40f6e8b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    'judul'\n",
+    "    'latar_belakang': 'Investor ritel dan analis junior sering menghadapi kesulitan dalam memprediksi\\npergerakan harga saham yang sangat fluktuatif. Keputusan investasi seringkali\\ndidasari oleh intuisi daripada analisis data yang mendalam, sehingga\\nmeningkatkan risiko kerugian.',\n",
+    "    'tujuan_inovasi': '1. Menyediakan alat bantu prediksi pergerakan harga saham dengan tingkat\\nakurasi tinggi. 2. Membantu investor mengambil keputusan yang lebih\\nterinformasi (data-driven). 3. Meningkatkan literasi dan kepercayaan diri investor\\nritel di pasar modal.',\n",
+    "    'deskripsi_inovasi': 'Membangun platform berbasis web dan mobile yang menggunakan model\\nMachine Learning (seperti LSTM) untuk menganalisis data historis pasar.\\nPlatform akan menyajikan hasil prediksi dalam bentuk visual yang mudah\\ndipahami, seperti grafik tren untuk 7 hari ke depan.'\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame([data])\n",
+    "print(df)\n"
+   ]
   }
  ],
  "metadata": {
@@ -225,7 +291,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.13"
   }
  },
